--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
   background: #000;
   color: white;
   font-family: sans-serif;
+  font-size: 12px;
 }
 #canvas-container {
   position: relative;
@@ -19,6 +20,7 @@ canvas {
   top: 0;
 }
 .controls {
+  z-index: 1;
   padding: 10px;
   background: rgba(0, 0, 0, 0.4);
   text-shadow: 0 0 2px black;
@@ -26,32 +28,15 @@ canvas {
   top: 0;
   left: 0;
 }
-.controls,
-.fork-me {
-  z-index: 1;
-}
 .controls th {
   text-align: left;
 }
 .controls th,
 .controls td {
-  padding: 10px;
+  padding: 0 10px 0;
 }
 .controls > button,
 .controls > label {
-  margin: 10px;
+  margin: 0 10px 0;
 }
-button {
-  border: 1px solid gray;
-  background: rgba(128, 128, 128, 0.4);
-  color: #000;
-  display: flex;
-  padding: 5px 10px;
-}
-button svg {
-  margin-right: 5px;
-  height: 1em;
-}
-button svg path {
-  fill: currentColor;
-}
+
