feat: 绘制的 Canvas 画面撑满 body

--- a/index.css
+++ b/index.css
@@ -12,10 +12,12 @@ body {
   font-size: 12px;
 }
 #canvas-container {
-  position: relative;
+  /* position: relative; */
+  height: 100%;
 }
 canvas {
-  position: absolute;
+  /* position: absolute;
   left: 0;
-  top: 0;
+  top: 0; */
+  height: 100%;
 }
